# openal_ffmpeg

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  alplay.c  common.cpp  common.h  decode_audio.c  main.cpp
